<resources>
    <string name="site">https://hallofprophecy.xyz</string>
    <string name="app_name">NostraNet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_twitter_login">Log in with Twitter</string>

    <string name="consumer_key">mqy52jK4VaN1Em7MnDvENoIrX</string>
    <string name="consumer_secret">6unqCoCw4SYzBNGpYqEb0kGKAYwJmTt32CWka5mUJLd3nXGZPj</string>
    <string name="title_activity_create_twitter_prediction">Create Twitter prediction</string>
    <string name="title_activity_user_profile">Prediction Profile</string>\

    <string name="Logo_description">Logo</string>
    <string name="User_banner">Banner</string>
    <string name="User_avatar">Avatar</string>
    <string name="Add_twitter_prediction">Make a prediction with Twitter</string>
    <string name="Add_yahoo_finance_prediction">Make a prediction with Yahoo Finance</string>
    <string name="View_my_past_predictions">View my prediction profile</string>
    <string name="View_my_predictions">View upcoming predictions</string>
    <string name="Logout">Logout</string>

    <string name="Prediction_text_tooltip">What do you think is going to happen?</string>
    <string name="Prediction_text_hint">Prediction text</string>
    <string name="Arbiter_tooltip">What user is going to be the judge?</string>
    <string name="At_sign">\@</string>
    <string name="Pick_a_date">When is it going to happen?</string>
    <string name="Open_date_picker">Open calendar</string>
    <string name="Date_not_chosen">Date not chosen</string>
    <string name="Create_prediction">Record prediction!</string>
    <string name="Create_error">Prediction not created.</string>
    <string name="Invalid_prediction">Invalid prediction!</string>
    <string name="View_comments">Comments</string>
    <string name="View_wagers">Wagers</string>
    <string name="Arbiter_label">Arbiter: @</string>
    <string name="Status">"Status: "</string>
    <string name="Unknown">Unresolved</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="Author">by @</string>
    <string name="Due_date">"Due: "</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="title_activity_open_external_link">OpenExternalLink</string>
    <string name="title_activity_create_yahoo_finance_prediction">CreateYahooFinancePrediction
    </string>


    <string name="Yahoo_text_tooltip">What currency ratio do you want to predict?</string>
    <string name="Yahoo_currency_button">Pick currency</string>
    <string name="Yahoo_direction">More or less?</string>
    <string name="Yahoo_value">Value</string>
    <string name="title_activity_yahoo_prediction">YahooPrediction</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_activity_movie_ratings_create_prediction">
        MovieRatingsCreatePredictionActivity
    </string>
</resources>
