<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.archonmode.artemsinyakov.hallofprophecy.Activities.CreateYahooFinancePrediction"
    tools:showIn="@layout/activity_create_yahoo_finance_prediction">

    <TextView
        android:id="@+id/prediction_tooltip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Yahoo_text_tooltip"
        android:textIsSelectable="false"
        style="@style/QText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <Button
        android:id="@+id/currencies_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yahoo_currency_button"
        android:layout_below="@id/prediction_tooltip"/>

    <Button
        android:id="@+id/direction_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yahoo_direction"
        android:layout_below="@id/currencies_picker"/>

    <EditText android:id="@+id/value_picker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/direction_picker"
        android:maxLength="16"
        android:inputType="numberDecimal"
        android:hint="@string/Yahoo_value"/>

    <TextView
        android:id="@+id/date_tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value_picker"
        android:text="@string/Pick_a_date"
        android:textIsSelectable="false"
        style="@style/QText"
        />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/date_tooltip">

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date_not_chosen"/>

        <Button
            android:id="@+id/datePickerConfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Open_date_picker"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_prediction"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
